Created new Migration for Job Position Descriptions columns in JobPosition table and seeded. Also updated FAQs and seeded 5 new positions in Similar Search

--- a/Web/Pages/Faqs.cshtml
+++ b/Web/Pages/Faqs.cshtml
@@ -15,6 +15,12 @@
     </li>
     <li>
         <details>
+            <summary><p><b>@Localizer["Q20"] </b></p></summary>
+            <p>@Localizer["A20"]</p>
+        </details>
+    </li>
+    <li>
+        <details>
             <summary><p><b>@Localizer["Q2"] </b></p></summary>
             <p>@Localizer["A2"]</p>
         </details>
